<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".services.FallDetectedActivity">

    <ImageView
        android:id="@+id/fall_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fall_detected_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_100sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fall_img"
        android:text="@string/fall_was_detected_from_your_device_n_nare_you_alright"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_30sdp"
        android:id="@+id/alertMsg"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_checking_in_to_see_nhow_you_re_doing_have_a_nice_day"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fall_img"
        android:layout_marginTop="@dimen/_40sdp"
        android:id="@+id/resText"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@color/green"
        app:cornerRadius="@dimen/_8sdp"
        android:elevation="@dimen/_20sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/safe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertMsg"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/white"
        android:text="@string/alright"
        android:textAllCaps="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>