<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:context=".authentication.home.EntryActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_90sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/entry_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:letterSpacing="0.1"
        android:text="@string/hello"
        style="@style/textColors"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/elder_login"
        style="@style/textColors"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/login_as_elder"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:strokeColor="@color/myBlue"
        app:cornerRadius="@dimen/_15sdp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/_30sdp"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/caretaker_login"
        style="@style/textColors"
        app:cornerRadius="@dimen/_15sdp"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/login_as_caretaker"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elder_login"
        app:strokeColor="@color/myBlue"
        android:layout_marginTop="@dimen/_10sdp"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>