<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.home.OtpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_margin="@dimen/_10sdp"
            android:scaleType="centerCrop"
            style="@style/imageColor"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/otp_back"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/otp_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textColor="@color/myBlue"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_otp_sent_your_number_n_xx_xxxxxxxxxx"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/Base.Theme.ElderlyCareApplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_14ssp"
            android:id="@+id/sent_otp_num"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sent_otp_num"
            android:gravity="center"
            android:padding="@dimen/_20sdp">

            <com.chaos.view.PinView
                android:id="@+id/otp_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:itemCount="6"
                android:hint="@string/xxxxxx"
                style="@style/pinHintClr"
                android:inputType="number"
                app:hideLineWhenFilled="true"
                android:elevation="@dimen/_20sdp"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/myBlue"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:cornerRadius="@dimen/_8sdp"
                    android:text="@string/verify"
                    android:id="@+id/otp_verify"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:indeterminateTint="@color/myBlue"
                    android:layout_gravity="center"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:id="@+id/otp_progress"
                    android:visibility="gone"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/resend_otp_in_60_seconds"
                android:id="@+id/resendOtp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>