<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.elder.SignInEldersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            style="@style/imageColor"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_margin="@dimen/_10sdp"
            android:scaleType="centerCrop"
            android:id="@+id/caretaker_login_back"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/imageView_caretaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/entry_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caretaker_login_back" />

        <TextView
            android:id="@+id/caretaker_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back_caretaker"
            android:textSize="@dimen/_24ssp"
            android:textStyle="italic|bold"
            style="@style/textColors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_caretaker" />


        <TextView
            android:id="@+id/caretaker_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/secondary_text"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caretaker_welcome_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caretaker_login_text">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker_caretaker"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                app:ccp_contentColor="@color/myBlue"
                app:ccp_textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_5sdp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/caretaker_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Theme.ElderlyCareApplication"
                android:hint="@string/phone"
                android:layout_marginTop="@dimen/_15sdp"
                app:boxStrokeColor="@color/myBlue"
                app:boxStrokeWidthFocused="@dimen/_2sdp"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconMode="clear_text"
                android:elevation="@dimen/_10sdp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/caretaker_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Theme.ElderlyCareApplication"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/_10sdp"
                app:boxStrokeColor="@color/myBlue"
                app:boxStrokeWidthFocused="@dimen/_2sdp"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconMode="password_toggle"
                android:elevation="@dimen/_10sdp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/caretaker_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    app:cornerRadius="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/myBlue"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:indeterminateTint="@color/myBlue"
                    android:layout_gravity="center"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:id="@+id/caretaker_login_progress"
                    android:visibility="gone"/>
            </FrameLayout>

            <TextView
                android:id="@+id/caretaker_create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/create_a_account"
                android:layout_gravity="center"
                android:textColor="@color/myBlue"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_marginTop="@dimen/_10sdp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>